[package]
name = "parquet_mem_leak"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = "49.0.0"
arrow-array = "49.0.0"
parquet= { version = "49.0.0", features = ["async"] }
random-string = "1.0.1"
tokio = { version = "1.33.0", features = ["full"]}
anyhow = { version = "1.0.75", features = ["backtrace"] }