[package]
name = "parquet_mem_leak"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = "49.0.0"
arrow-array = "49.0.0"
parquet= "49.0.0"
anyhow = { version = "1.0.75", features = ["backtrace"] }